The MobileNav component has been expanded. The ‘hamburger-react’ library was used to implement a nice burger icon animation. The logic for hiding and displaying the navigation bar in response to scrolling has been implemented. // The AccordionMenu component was created, controlled based on two conditions: state and scrollDown position. // createPortal was used to physically place AccordionMenu directly in the body because initially the z-index of this element was not working correctly - it was not hiding behind its parent.

--- a/src/components/TopBar.module.scss
+++ b/src/components/TopBar.module.scss
@@ -1,14 +1,13 @@
-/* TopBar.module.scss */
 .topbar {
 	position: sticky;
 	top: 0;
-  padding-top: 5px;
+	padding-top: 5px;
 	backdrop-filter: saturate(180%) blur(8px);
 	will-change: transform;
 	transform: translateY(0);
 	background: rgba(32, 124, 11, 0.9);
 	transition: transform 300ms ease, box-shadow 200ms ease, background 200ms ease;
-	z-index: 1000;
+	z-index: 900;
 
 	&.hidden {
 		transform: translateY(-100%);
@@ -26,10 +25,10 @@
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 12px 20px;
+	gap: 100px;
 }
 
 .brand {
-	width: 120px;
+	// width: 120px;
+	width: 140px;
 }
-
-
